fix(mathjax): some svg alignment problems

--- a/source/css/common/markdown.styl
+++ b/source/css/common/markdown.styl
@@ -225,6 +225,9 @@
     display inline-block
     vertical-align baseline
 
+    svg
+      display inline
+
   mjx-container[display="true"]
     display flex !important
     justify-content center
